# tiva-lang

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: generate-dot-clangd.cmake
example/: first.ti  function_calls.ti  logic_operators.ti  second.ti
src/: debug.hpp  lexer.cpp  lexer.hpp  main.cpp  utility.hpp
src/codegen/: codegen_visitor.cpp  codegen_visitor.hpp  module.cpp  module.hpp
src/core/: scope_map.hpp  translation_unit.cpp  translation_unit.hpp
src/driver/: compiler.cpp  compiler.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: ast_nodes.cpp  ast_nodes.hpp  parser.cpp  parser.hpp
src/semantic/: semantic_visitor.cpp  semantic_visitor.hpp  types.cpp  types.hpp
src/utility/: utility.hpp
test/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  tokenize_test.cpp  utility_test.cpp
